--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <script type="module" src="./assets/js/main.js" defer></script>
 
-    <title>john-john11 // Portifólio</title>
+    <title>waweruKE1// Portifólio</title>
   </head>
   <body>
     <nav id="navigation">
@@ -219,7 +219,7 @@
             <h1>I'm John,</h1>
           </header>
           <div class="content">
-            <p class="line typing">Front-End Web Developer</p>
+            <p class="line typing">Tech-savvy|Computer Science Student|Coding Explorer</p>
             <a class="button" href="#contact"> Talk to me </a>
           </div>
         </div>
@@ -291,9 +291,9 @@
             <div class="card">
               <img src="./assets/images/css.png" alt="Ícone do CSS3." />
 
-              <h3>CSS3</h3>
+              <h3>CSS</h3>
               <p>
-                CSS3 is a style language used to describe the presentation of page elements by styling them.
+                CSS is a style language used to describe the presentation of page elements by styling them.
               </p>
             </div>
             <div class="card">
@@ -318,7 +318,7 @@
           <div class="content">
             <ul>
               <li>
-                <a href="email: kinyanjuijohn2408@gmail.com" title="Enviar e-mail">
+                <a href="email: kinyanjuijohn2408@gmail.com" title="e-mail">
                   <svg
                     width="24"
                     height="24"
@@ -427,7 +427,7 @@
           <ul class="social-links">
             <li>
               <a
-                href="https://instagram.com/boi_child254?igshid=MzMyNGUyNmU2YQ=="
+                href="https://www.instagram.com/boi_child254?igsh=MWs2OWxxaXptaG03YQ=="
                 title="Instagram"
                 target="_blank"
                 ><svg
@@ -463,7 +463,7 @@
             </li>
             <li>
               <a
-                href="https://github.com/john-john11"
+                href="https://github.com/waweruKE1"
                 title="Github"
                 target="_blank"
                 ><svg
@@ -482,7 +482,7 @@
             </li>
             <li>
               <a
-                href="https://www.linkedin.com/in/john-waweru-9a60b0279/"
+                href="https://www.linkedin.com/in/john-waweru-9a60b0279?fromQR=1"
                 title="LinkedIn"
                 target="_blank"
                 ><svg
@@ -501,7 +501,7 @@
             </li>
             <li>
               <a
-                href="https://twitter.com/Johnjhone1"
+                href="https://twitter.com/wawerawKE"
                 title="Twitter"
                 target="_blank"
                 ><svg
